.tekton/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: shopcarts-listener-route
  namespace: shopcarts
  labels:
    app.kubernetes.io/name: shopcarts
    app.kubernetes.io/component: tekton-trigger
spec:
  to:
    kind: Service
    name: el-shopcarts-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
